<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_reminders"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_reminders" />
    <item
        android:id="@+id/nav_timeline"
        android:icon="@android:drawable/presence_away"
        android:title="@string/nav_timeline" />
    <item
        android:id="@+id/nav_tomato"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/nav_tomato" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_settings" />
</menu>